--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -90,6 +90,7 @@ body {
     background-color: #44c42d;
     padding-right: 0px;
     margin-left: 10px;
+    display: inline-block;
 }
 
 .label-filter a {
@@ -1944,15 +1945,73 @@ a.remove-ybd:hover {
 #manage-filters {
     border: solid 1px #919191;
     font-weight: 300;
+    margin-top: 10px;
 }
 
 .filterbox,
 .filterwidgetbox {
     color: #c6c6c6 !important;
     height: 200px;
-    border-left: solid 1px #919191;
     padding: 0;
     padding: 5px 15px;
+}
+
+
+
+
+#filters ul.variables h4 {
+    font-size: 14px;
+    text-transform: none;
+    font-weight: normal;
+    background-color: #ebebeb;
+    color: #4a4a4a;
+    padding: 10px 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#filters ul.variables,
+#filters ul.variables ul {
+    padding: 0;
+
+}
+
+@media (min-width: 992px) {
+    #filters ul.presets a,
+    #filters ul.presets h4 {
+        margin-left: 15px !important;
+    }
+
+    #filters ul.variables,
+    #filters ul.variables ul {
+        padding: 0;
+        margin: 0;
+    }
+
+    .filterbox {
+        border-left: solid 1px #919191;
+    }
+
+}
+
+@media (max-width: 992px) {
+    #filterrow {
+        margin: 0px 0px !important;
+    }
+
+
+    .filterbox:nth-child(2) {
+        border-top: solid 1px #919191;
+        border-bottom: solid 1px #919191;
+    }
+
+    #filters:nth-child(1) ul.variables {
+        margin-left: -15px;
+    }
+
+    #filterbox:nth-child(2) ul.variables {
+        margin-left: 15px !important;
+    }
 }
 
 #filter_value {
@@ -1987,39 +2046,23 @@ a.remove-ybd:hover {
     width: 100%;
     padding: 5px 15px;
 }
+#filterlist > label:nth-child(1) {
+    margin-bottom: 0px;
+}
 
 .filterbox > .input-group {
     padding: 5px 5px;
 }
 
 .filterbox.no-pad {
-    padding: 19px 0 15px;
+    padding: 5px 0 15px;
 }
 
-#filters ul.variables,
-#filters ul.variables ul {
-    padding: 0;
-    margin: 0;
-}
 
-#filters ul.variables h4 {
-    font-size: 14px;
-    text-transform: none;
-    font-weight: normal;
-    background-color: #ebebeb;
-    color: #4a4a4a;
-    padding: 10px 15px;
-    margin: 0;
-}
-
-#filters ul.presets a,
-#filters ul.presets h4 {
-    margin-left: 15px !important;
-}
-
-#filters ul.variables ul li a {
+#filters ul.presets li a,
+#filters ul.variables li a {
     display: block;
-    padding: 0 15px 0 30px;
+    padding: 5px 15px 5px 30px;
 }
 
 #filters ul.variables > li > ul > li:hover > a {
@@ -2037,6 +2080,10 @@ a.remove-ybd:hover {
     background-color: #fc941f;
     color: #fcfcfc;
     text-decoration: none;
+}
+
+#filter_value > label {
+    height: 1.5em;
 }
 
 .form-horizontal .checkbox,
