made filter work for intention and fixed link in all deals view
Former-commit-id: 4b70657775378894a919c38f2d6632353a05c1b2

--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -154,7 +154,7 @@
               {% if item.intention %}
                 {% for i in item.intention %}
                   <li>
-                    <a href="/global/data/all?variable=intention&operator=is&value={{ i|slugify }}"
+                    <a href="/global/data/all?variable=intention&operator=is&value={{ i }}"
                        {% if group != "intention" %}class="intention-icon {{ i|slugify }}" data-content="{{ i }}"{% endif %}><span>{{ i }}</span></a>
                   </li>
                 {% endfor %}
