Added export view

--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -21,7 +21,7 @@
     </span></li>
     <li class="divider"></li>
     <li role="presentation">
-        {% include "download.html" %}
+        {% include "export.html" %}
     </li>
 {% endblock %}
 
