--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -31,7 +31,7 @@
     </a></li>
     <li class="divider"></li>
     <li role="presentation">
-        {% include "download.html" %}
+        {% include "export.html" %}
     </li>
 {% endblock %}
 
