--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -1,4 +1,4 @@
-{% extends "global_base.html" %}
+{% extends "base.html" %}
 {% load static i18n custom_tags humanize %}
 
 {% block head %}
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static "css/map.css" %}"/>
 
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
 
