--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -32,7 +32,7 @@
     </a></li>
     <li class="divider"></li>
     <li role="presentation">
-        {% include "download.html" %}
+        {% include "export.html" %}
     </li>
 {% endblock %}
 
