Cleanup table group view
Former-commit-id: deb5cc05a0bbde6a1ad5aa4ad57e2c5fb164c4b3

--- a/grid/templates/all_deals.html
+++ b/grid/templates/all_deals.html
@@ -10,7 +10,7 @@
   <li><a href="/">Home</a></li>
   <li><a href="/global/">Global</a></li>
   {% if group == "all" %}
-  <li>{{ name|capfirst }}</li>
+  <li>{% trans "All deals" %}</li>
   {% elif filters.group_value %}
   <li><a href="/global/data/{{ group_slug }}/?{% add_or_update_param request.GET 'order_by' '' %}">{% trans "By" %} {{ group }}</a></li>
   <li>{{ name }}</li>
