Fixed grid subnav
Former-commit-id: d51be50f39c509645da20e9a5d2da0ba84489137

--- a/grid/templates/grid/subnav.html
+++ b/grid/templates/grid/subnav.html
@@ -28,15 +28,15 @@
                         <li class="dropdown">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true"
-                               aria-expanded="false"><span>{% trans "By Investor" %} <span class="caret"></span></span></a>
+                               aria-expanded="false"><span>{% trans "By Stakeholder" %} <span class="caret"></span></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/global/data/by-investor/">{% trans "By Investor" %}</a></li>
-                                <li><a href="/global/data/by-investor-region/">{% trans "By Investor Region" %}</a></li>
-                                <li><a href="/global/data/by-investor-country/">{% trans "By Investor Country" %}</a></li>
+                                <li><a href="/global/data/by-stakeholder-name/">{% trans "By Stakeholder" %}</a></li>
+                                <li><a href="/global/data/by-stakeholder-region/">{% trans "By Stakeholder Region" %}</a></li>
+                                <li><a href="/global/data/by-stakeholder-country/">{% trans "By Stakeholder Country" %}</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="/global/data/by-data-source/" role="button">
+                            <a href="/global/data/by-data-source-type/" role="button">
                                 {% trans "By Data Source" %}
                             </a>
                         </li>
