Hackfix for not-yet-ready feature
Former-commit-id: fc7d1b876ea14e455e45bb96c8a9489f10f81134

--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -45,6 +45,8 @@
                         var investor = form.find('.operational_stakeholder');
                         if (investor) {
                             var index = 0;
+                            var alreadyInitizalized = form.find("#chart" + index).find('svg') > 0;
+                            if (alreadyInitizalized)
                             setupSankey(index);
                         }
                     }
