--- a/charts/templates/charts/transnational-deals.html
+++ b/charts/templates/charts/transnational-deals.html
@@ -156,7 +156,7 @@ path.arc {
     <!--<![endif]-->
     <script type="text/javascript" src="{% static "js/packages.js" %}"></script>
     <script type="text/javascript" src="{% static "legacy/transnational-deals.js" %}"></script>
-    <script type="text/javascript" src="{% static "legacy/main.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/main.js" %}"></script>
 <script type="text/javascript">
 $("button.close").click(function() {
     $(this).parents("div.well").hide();
