--- a/grid/templates/deal-comparison.html
+++ b/grid/templates/deal-comparison.html
@@ -1,15 +1,7 @@
-{% extends "base.html" %}
+{% extends "global_base.html" %}
 {% load static i18n custom_tags %}
 
-{% block head %}
-
-  {# map #}
-  <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
-  <link rel="stylesheet" href="{% static "css/map.css" %}"/>
-
-  <script src="{% static "vendor/openlayers/ol-debug.js" %}" type="text/javascript"></script>
-  <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
-  <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+{% block global_head %}
 {% endblock %}
 
 
