--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -4,7 +4,7 @@
 
 {% load threadedcomments_tags %}
 
-{% block head %}
+{% block global_head %}
 
     {# bootstrap #}
     {% comment %}
@@ -14,15 +14,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   {% endcomment %}
 
-    <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/map.css" %}"/>
-
-    {# map #}
-    <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
-    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
-    <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
 {% endblock %}
 
 {% block page_title %}{% trans "Deal" %} #{{ deal.activity_identifier }}{% endblock %}
