--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -2,6 +2,20 @@
 {% load i18n static %}
 
 {% block head %}
+
+    <!-- Grid CSS -->
+    <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/map.css" %}"/>
+
+    <!-- Grid Vendor libs first -->
+    <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
+
+    <!-- Landmatrix Grid libraries -->
+    <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+    {% block global_head %}
+    {% endblock %}
 {% endblock %}
 {% block body_class %}get-the-detail{% endblock %}
 
@@ -70,7 +84,10 @@
     <script src="{% static "vendor/d3/d3.min.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "vendor/d3-sankey/sankey/sankey.js" %}" type="text/javascript" charset="utf-8"></script>
 
-    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
+
+    <script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "legacy/vendor/jquery.stickytableheaders.js" %}" type="text/javascript" charset="utf-8"></script>
-    <script src="{% static "legacy/main.js" %}" type="text/javascript" charset="utf-8"></script>
+    {% block global_js %}
+    {% endblock %}
 {% endblock %}
