--- a/grid/templates/grid/subnav.html
+++ b/grid/templates/grid/subnav.html
@@ -54,7 +54,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="/global/data/" role="button"><span>{% trans "All deals" %}</span></a>
+                            <a href="{% url 'app_main' %}" role="button"><span>{% trans "All deals" %}</span></a>
                         </li>
                     </ul>
                 </div>
