--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -5,15 +5,15 @@
 {% block title %}{% trans "Chart" %}{% endblock %}
 
 {% block breadcrumb_inner %}
-<li><a href="/global/">Global</a></li>
-<li><a href="/global/chart">Charts</a></li>
+<li><a href="{% url 'app_main' %}">{% trans 'Global' %}</a></li>
+<li><a href="{% url 'chart_transnational_deals' %}">{% trans 'Charts' %}</a></li>
 {% endblock %}
 
 {% block subnav_inner %}
-    <li role="presentation"><a href="/global/map/">
+    <li role="presentation"><a href="{% url 'map' %}">
         <i class="lm lm-map-marker"></i>{% trans "Map" %}
     </a></li>
-    <li role="presentation"><a href="/global/data/">
+    <li role="presentation"><a href="{% url 'app_main' %}">
         <i class="lm lm-table"></i>{% trans "Data" %}
     </a></li>
     <li role="presentation" class="active"><span>
