--- a/editor/templates/dashboard.html
+++ b/editor/templates/dashboard.html
@@ -47,7 +47,7 @@
                             {% for changeset in latest_added.cs %}
                                 <tr>
                                     <td class="deal"><a
-                                            href="/deal/{{ changeset.deal_id }}/">#{{ changeset.deal_id }}</a>
+                                            href="{% url 'deal_detail' deal_id=changeset.deal_id %}">#{{ changeset.deal_id }}</a>
                                     </td>
                                     <td class="user">{{ changeset.user }}</td>
                                     <td class="comment" title="{{ changeset.comment }}"><span
@@ -98,7 +98,7 @@
                             {% for changeset in latest_modified.cs %}
                                 <tr>
                                     <td class="deal"><a
-                                            href="/deal/{{ changeset.deal_id }}/">#{{ changeset.deal_id }}</a>
+                                            href="{% url 'deal_detail' deal_id=changeset.deal_id %}">#{{ changeset.deal_id }}</a>
                                     </td>
                                     <td class="user">{{ changeset.user }}</td>
                                     <td class="comment" title="{{ changeset.comment }}"><span
@@ -151,7 +151,7 @@
                             {% for changeset in latest_deleted.cs %}
                                 <tr>
                                     <td class="deal"><a
-                                            href="/deal/{{ changeset.deal_id }}/">#{{ changeset.deal_id }}</a>
+                                            href="{% url 'deal_detail' deal_id=changeset.deal_id %}">#{{ changeset.deal_id }}</a>
                                     </td>
                                     <td class="user">{{ changeset.user }}</td>
                                     <td class="comment" title="{{ changeset.comment }}"><span
@@ -206,14 +206,14 @@
                                 {% for changeset in manage.a_changesets.updates.cs %}
                                     <tr class="update">
                                         <td class="deal"><a
-                                                href="/deal/{{ changeset.deal_id }}/">#{{ changeset.deal_id }}</a>
+                                                href="{% url 'deal_detail' deal_id=changeset.deal_id %}">#{{ changeset.deal_id }}</a>
                                         </td>
                                         <td class="user">{{ changeset.user }}</td>
                                         <td class="state">{% trans "Update" %}</td>
                                         <td class="action">
-                                            <a href="/editor/manage/deal/approve/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='approve' id=changeset.id %}"
                                                class="approve">{% trans "Approve" %}</a>
-                                            <a href="/editor/manage/deal/reject/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='reject' id=changeset.id %}"
                                                class="reject">{% trans "Reject" %}</a>
                                         </td>
                                     </tr>
@@ -221,14 +221,14 @@
                                 {% for changeset in manage.a_changesets.deletes.cs %}
                                     <tr class="delete">
                                         <td class="deal"><a
-                                                href="/deal/{{ changeset.deal_id }}/">#{{ changeset.deal_id }}</a>
+                                                href="{% url 'deal_detail' deal_id=changeset.deal_id %}">#{{ changeset.deal_id }}</a>
                                         </td>
                                         <td class="user">{{ changeset.user }}</td>
                                         <td class="state">{% trans "Delete" %}</td>
                                         <td class="action">
-                                            <a href="/editor/manage/deal/approve/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='approve' id=changeset.id %}"
                                                class="approve">{% trans "Approve" %}</a>
-                                            <a href="/editor/manage/deal/reject/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='reject' id=changeset.id %}"
                                                class="reject">{% trans "Reject" %}</a>
                                         </td>
                                     </tr>
@@ -236,14 +236,14 @@
                                 {% for changeset in manage.a_changesets.inserts.cs %}
                                     <tr class="insert">
                                         <td class="deal"><a
-                                                href="/deal/{{ changeset.deal_id }}/">#{{ changeset.deal_id }}</a>
+                                                href="{% url 'deal_detail' deal_id=changeset.deal_id %}">#{{ changeset.deal_id }}</a>
                                         </td>
                                         <td class="user">{{ changeset.user }}</td>
                                         <td class="state">{% trans "Add" %}</td>
                                         <td class="action">
-                                            <a href="/editor/manage/deal/approve/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='approve' id=changeset.id %}"
                                                class="approve">{% trans "Approve" %}</a>
-                                            <a href="/editor/manage/deal/reject/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='reject' id=changeset.id %}"
                                                class="reject">{% trans "Reject" %}</a>
                                         </td>
                                     </tr>
@@ -256,16 +256,16 @@
                                         <td class="user">{{ changeset.user }}</td>
                                         <td class="state">{% trans "Delete" %}</td>
                                         <td class="action">
-                                            <a href="/editor/manage/investor/approve/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='approve' id=changeset.id %}"
                                                class="approve">{% trans "Approve" %}</a>
-                                            <a href="/editor/manage/investor/reject/{{ changeset.id }}/"
+                                            <a href="{% url 'manage_deal' type='deal' action='reject' id=changeset.id %}"
                                                class="reject">{% trans "Reject" %}</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
                             </table>
-                            <a href="/editor/manage/">{% trans "Show all" %}</a>
+                            <a href="{% url 'manage' %}">{% trans "Show all" %}</a>
                         {% else %}
                             <p>{% trans "No pending changesets require your attention." %}</p>
                         {% endif %}
@@ -298,7 +298,7 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <a href="/editor/manage/">{% trans "Show all" %}</a>
+                        <a href="{% url 'manage' %}">{% trans "Show all" %}</a>
                     {% else %}
                         <p>{% trans "No feedback requests lately." %}</p>
                     {% endif %}
