--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -74,7 +74,7 @@
                 constantly evolving; to make this resource more accurate and comprehensive, we encourage your
                 participation.
             </p>
-            <a href="/info" class="btn btn-large" type="button">Read more</a>
+            <a href="{% url 'help' %}" class="btn btn-large" type="button">Read more</a>
 
         </div> <!-- Carousel & Explanation -->
     </div>
@@ -87,16 +87,16 @@
                     <img src="http://placehold.it/800x450"/>
 
                     <div class="row left">
-                        <a href="/global/map/">
+                        <a href="{% url 'map' %}">
                             <div class="col-md-offset-3 col-md-2"><span class="whitecircle"><i
                                     class="lm-map-marker"></i></span><br>Map
                             </div>
                         </a>
-                        <a href="/global/data/">
+                        <a href="{% url 'app_main' %}">
                             <div class="col-md-2"><span class="whitecircle"><i class="lm-table"></i></span><br>Data
                             </div>
                         </a>
-                        <a href="/global/charts/">
+                        <a href="{% url 'chart_transnational_deals' %}">
                             <div class="col-md-2"><span class="whitecircle"><i class="lm-bar-chart"></i></span><br>Charts
                             </div>
                         </a>
